# .sandbox

./: .gitignore
c_api/julia/: hello.c  hello.jl
elixir/elixir-oop/oop_demo/: README.md  mix.exs
elixir/elixir-oop/oop_demo/config/: config.exs
elixir/elixir-oop/oop_demo/lib/: oop_demo.ex
elixir/elixir-oop/oop_demo/test/: oop_demo_test.exs
elixir/extwitter/: README.md  mix.exs
elixir/extwitter/lib/: extwitter.ex
elixir/extwitter/test/: extwitter_test.exs
elixir/macros/: hygiene.exs
elixir/phoenix_framework/api_demo/: README.md  mix.exs
elixir/phoenix_framework/api_demo/config/: config.exs  dev.exs  prod.exs  test.exs
elixir/phoenix_framework/api_demo/lib/: api_demo.ex
elixir/phoenix_framework/api_demo/lib/api_demo/: endpoint.ex  repo.ex
elixir/phoenix_framework/api_demo/priv/repo/migrations/: 20150611114103_create_subscribers.exs  20150630120027_add_fields_to_subscribers.exs  20150706121701_add_fields_to_subscribers.exs
elixir/phoenix_framework/api_demo/test/: test_helper.exs
elixir/phoenix_framework/api_demo/test/controllers/: page_controller_test.exs
elixir/phoenix_framework/api_demo/test/support/: channel_case.ex  conn_case.ex  model_case.ex
elixir/phoenix_framework/api_demo/test/views/: error_view_test.exs  page_view_test.exs
elixir/phoenix_framework/api_demo/web/: router.ex  web.ex
elixir/phoenix_framework/api_demo/web/controllers/: subscriber_controller.ex
elixir/phoenix_framework/api_demo/web/models/: queries.ex  subscriber.ex
elixir/phoenix_framework/api_demo/web/templates/api/: describe_subscriber.json.eex
elixir/phoenix_framework/api_demo/web/views/: error_view.ex  subscriber_view.ex
elixir/phoenix_framework/hello_phoenix/config/: config.exs
elixir/phoenix_framework/hello_phoenix/lib/hello_phoenix/: endpoint.ex
elixir/phoenix_framework/hello_phoenix/web/: router.ex
elixir/phoenix_framework/hello_phoenix/web/controllers/: api_controller.ex  subscriber_controller.ex
elixir/phoenix_framework/hello_phoenix/web/models/: subscriber.ex
elixir/phoenix_framework/hello_phoenix/web/views/: api_view.ex  subscriber_view.ex
helloworld/crystal/hello/: LICENSE  README.md
helloworld/crystal/hello/src/: hello.cr
helloworld/golang/: hello.go
list_in_c/: Makefile.am  autogen.sh  configure.ac  list.c  list.h
list_in_c/src/: Makefile.am  example.c  list.h  list_in_c
list_in_c/src/lib/: Makefile.am  list.c  list.h
mem_in_c/: mem_helper.c  mem_helper.h
mem_in_c/mem_helper/: Makefile.am  autogen.sh  configure.ac
mem_in_c/mem_helper/src/: Makefile.am  example.c
mem_in_c/mem_helper/src/lib/: Makefile.am  mem_helper.c  mem_helper.h
message_passing_in_elixir/: hello0.ex  hello1.ex  hello2.ex  hello3.ex
oop_in_c/stack_with_range_checker/: stack_with_range_checker.c  stack_with_range_checker.h
